<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="common_mandatory">This is mandatory</string>
    <string name="common_error">There was an error</string>
</resources>